--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,15 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
+TELEGRAM_TOKEN=
+TELEGRAM_CHAT_ID=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+OLX_API_SCAN_URL=
 
+REDIS_CLIENT=predis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DATABASE=0
+REDIS_PASSWORD=password
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
