--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "laravel/lumen-framework": "^10.0"
+        "guzzlehttp/guzzle": "^7.5",
+        "illuminate/redis": "^10.5",
+        "laravel/lumen-framework": "^10.0",
+        "nutgram/nutgram": "^3.17",
+        "predis/predis": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
