--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,5 @@
 ### PROJECT SETTINGS ###
-COMPOSE_PROJECT_NAME=spa
+COMPOSE_PROJECT_NAME=olx-offers-scaner
 DATA_PATH_HOST=../data
 
 ### FPM CONTAINER ###
@@ -8,15 +8,10 @@ NODE_VERSION=14.19.3
 ### NGINX CONTAINER ###
 NGINX_PORT=80
 
-### MARIADB CONTAINER ###
-MYSQL_PORT=3306
-MYSQL_DATABASE=laravel
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-MYSQL_ROOT_PASSWORD=password
-
-### MEMCACHED CONTAINER ###
-MEMCACHED_HOST_PORT=11211
+### REDIS CONTAINER ###
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=password
 
 ### MISCELLANEOUS ###
 COMPOSE_CONVERT_WINDOWS_PATHS=1
