--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -5,12 +5,14 @@ RUN useradd -G www-data,root -u 1000 -d /home/laravel laravel
 RUN mkdir -p /home/laravel/.composer && \
     chown -R laravel:laravel /home/laravel
 
+USER root
+
 # Add docker php ext repo
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 # Install php extensions
 RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions mbstring pdo_mysql zip exif pcntl memcached
+    install-php-extensions zip exif pcntl memcached
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -43,37 +45,6 @@ RUN python3 -m pip install --upgrade supervisor
 
 # Install composer
 RUN curl -ss https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-# Install NODE.JS + NPM
-USER laravel
-
-ARG NODE_VERSION=node
-ENV NODE_VERSION ${NODE_VERSION}
-ENV NVM_DIR /home/laravel/.nvm
-
-# Install nvm (A Node Version Manager)
-RUN mkdir -p /home/laravel/.nvm && \
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash \
-        && . $NVM_DIR/nvm.sh \
-        && nvm install ${NODE_VERSION} \
-        && nvm use ${NODE_VERSION} \
-        && nvm alias ${NODE_VERSION} \
-        && ln -s `npm bin --global` /home/laravel/.node-bin;
-
-# Source NVM when loading bash since ~/.profile isn't loaded on non-login shell
-RUN echo "" >> ~/.bashrc && \
-    echo 'export NVM_DIR="$HOME/.nvm"' >> ~/.bashrc && \
-    echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> ~/.bashrc;
-
-# Add NVM binaries to root's .bashrc
-USER root
-
-RUN echo "" >> ~/.bashrc && \
-    echo 'export NVM_DIR="/home/laravel/.nvm"' >> ~/.bashrc && \
-    echo '[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm' >> ~/.bashrc \
-
-# Add PATH for node
-ENV PATH $PATH:/home/laravel/.node-bin;
 
 # Install ImageMagick
 RUN apt-get update; \
